# RuieiGame

./: .gitignore  CMakeLists.txt  CONTRIBUTE.md  README.md  RueieGame.sln
Engine/: CMakeLists.txt  Engine.cpp  Engine.h  Engine.vcxproj  main.cpp
Engine/include/: Engine.h  EngineBase.h  Errors.h  GameObject.h  Global.h  Logger.h  TextureList.h  TextureManager.h
Engine/include/Enums/: ErrorID.h  LogLevel.h  ResourceType.h
Engine/include/Global/: GlobalDefinitions.h  GlobalMath.h
Engine/src/: Engine.cpp  EngineBase.cpp  GameObject.cpp  Logger.cpp  TextureManager.cpp
HelloWorld/: CMakeLists.txt  main.cpp
RueieGame/: RueieGame.vcxproj
Tests/: CMakeLists.txt  TestLogger.cpp  TestTextureManager.cpp  main.cpp
